--- a/websocket-chat/client/package.json
+++ b/websocket-chat/client/package.json
@@ -11,11 +11,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "identicon.js": "^2.3.3",
+    "leaflet": "^1.7.1",
     "lorem-ipsum": "^2.0.3",
     "react": "^17.0.2",
     "react-chat-elements": "^10.16.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-leaflet": "^3.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.7.5"
   }
 }
